Add manifest with supportedos to prevent Microsoft Program Compatibility Assistant

--- a/eifixer/eifixer.vcxproj
+++ b/eifixer/eifixer.vcxproj
@@ -93,6 +93,9 @@
   <ItemGroup>
     <Image Include="eifixer.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="eifixer.manifest" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
