--- a/eifixer/eifixer.vcxproj.filters
+++ b/eifixer/eifixer.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="eifixer.manifest">
+      <Filter>Resource Files</Filter>
+    </Manifest>
+  </ItemGroup>
 </Project>
